🎨 디자인: 회원가입 디자인 변경
- 닉네임 중복체크 오류 수정
- 비밀번호 입력 즉시 검증 추가